[package]
name = "ucil-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL daemon binary: file watcher, plugin manager, query router, session manager"

[[bin]]
name = "ucil-daemon"
path = "src/main.rs"

# Mock MCP plugin used by the plugin-manager integration tests. Lives
# under tests/support/ so it is co-located with its only consumer.
# Integration tests reach it via `env!("CARGO_BIN_EXE_mock-mcp-plugin")`.
[[bin]]
name = "mock-mcp-plugin"
path = "tests/support/mock_mcp_plugin.rs"

[dependencies]
anyhow.workspace = true
# Arrow schema + array types back the `code_chunks` LanceDB table schema
# (master-plan §12.2 lines 1321-1346) used by `branch_manager` for the
# per-branch vector store lifecycle (Phase 2 Week 7, P2-W7-F09, WO-0053).
arrow-array.workspace = true
arrow-schema.workspace = true
# LanceDB async Rust client — opens the per-branch `vectors/` connection
# root (master-plan §11.2 line 1074) used by `branch_manager` for table
# lifecycle (P2-W7-F09).
lancedb.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
# `rusqlite` is needed so the `executor` pipeline (P1-W4-F04) can build
# `rusqlite::params!` bindings inside the `KnowledgeGraph::execute_in_transaction`
# closure — the closure signature is `FnOnce(&Transaction) -> Result<_, rusqlite::Error>`.
rusqlite = { workspace = true }
ucil-core = { path = "../ucil-core" }
# `ucil-treesitter` drives the tree-sitter → knowledge-graph executor
# pipeline (P1-W4-F04, master-plan §18 Phase 1 Week 4 line 1759).
ucil-treesitter = { path = "../ucil-treesitter" }
# In-process `ripgrep` libraries back the `search_code` MCP tool's
# text-search half (`P1-W5-F09`, WO-0035 / DEC-0009).  Only the
# `ucil-daemon::text_search` module consumes them.
ignore.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
grep-matcher.workspace = true
# `tree-sitter` + `streaming-iterator` back the `understand_code` MCP
# tool's `count_imports` helper (`P1-W4-F09`, WO-0036).  The helper
# compiles language-specific `Query` strings against the parse tree
# emitted by `ucil_treesitter::Parser`; `streaming-iterator` is needed
# because tree-sitter 0.25's `QueryMatches` yields captures via
# `StreamingIterator`, not `Iterator`.
tree-sitter.workspace = true
streaming-iterator.workspace = true
# `async-trait` macro — allows the `SerenaHoverClient` trait in
# `executor.rs` (WO-0037 for P1-W5-F02) to declare an `async fn hover`
# method while remaining object-safe so downstream wiring can hold an
# `Arc<dyn SerenaHoverClient>` against the live Serena MCP channel.
async-trait = { workspace = true }
# `tempfile::TempDir` backs the per-invocation `KnowledgeGraph` SQLite
# file the `mcp --stdio --repo <PATH>` code path bootstraps in
# `main.rs` (WO-0041).  The temp directory's lifetime is bound to the
# `serve` loop so SQLite's WAL file + lock file stay on disk for the
# duration of the stdio session.
tempfile.workspace = true
# SCIP cross-repo symbol indexing pipeline (P2-W7-F08, WO-0055,
# DEC-0014).  `scip` decodes the protobuf payload emitted by the
# `scip-rust` indexer; `protobuf` provides the `Message::parse_from_bytes`
# entry-point and the `protobuf::Error` type the `ScipError` enum names
# in its `ProtobufDecode` variant.
scip = { workspace = true }
protobuf = { workspace = true }
# `ucil-embeddings` provides `CodeRankEmbed` (default 137M Int8-quantised
# embedding model, P2-W8-F02, WO-0059) and `EmbeddingChunker` (real-tokenizer
# chunker, P2-W8-F05, WO-0060) consumed by `lancedb_indexer.rs`
# (P2-W8-F04, WO-0064).  This is the FIRST consumer of `ucil-embeddings`
# from `ucil-daemon`.  The dep transitively pulls `ort 2.x` with the
# `download-binaries` CPU EP per WO-0058 — first-build cargo wall-time
# inflation by 30-90s is expected per WO-0058 lessons line 565.
ucil-embeddings = { path = "../ucil-embeddings" }
# `sha2` provides `Sha256` for the `file_hash` column of `code_chunks`
# (master-plan §12.2 line 1335).  Used by `lancedb_indexer.rs` (P2-W8-F04,
# WO-0064) to compute the content-addressed delta key.
sha2.workspace = true
# `futures::TryStreamExt` drains the `lancedb::Table::query().execute().await?`
# `RecordBatchStream` into a `Vec<RecordBatch>` for the `find_similar` MCP
# tool's per-call query path (`P2-W8-F08`, WO-0066, master-plan §3.2 line
# 219 + §18 Phase 2 Week 8 line 1791).  The WO-0064 frozen acceptance test
# (`executor::test_lancedb_incremental_indexing`) also consumes
# `TryStreamExt` (the dep was previously in `[dev-dependencies]`); the WO-0066
# handler is the FIRST production consumer, so the dep is hoisted from
# `[dev-dependencies]` to `[dependencies]` — `[dependencies]` deps are visible
# to tests too, so the dev-dep entry is now redundant.  No new EXTERNAL
# crate enters the dep tree (`futures` was already transitively present
# via `lancedb` / `lance-*`); the visibility-tier hoist matches WO-0066
# scope_in 24 ("All required deps already present").
futures.workspace = true
# `ucil-lsp-diagnostics` provides `DiagnosticsClient`, `SerenaClient`, the
# `Diagnostic`/`DiagnosticSeverity`/`Language` data types, and the
# `lsp_types::Diagnostic` re-export consumed by the F15 `type_check`
# MCP tool dispatch handler (P3-W11-F15, WO-0090).  The wire surface
# of the bridge has been stable since WO-0014/WO-0015; this is the
# first daemon-side consumer.  Sibling-crate path dep, so no new
# external dep enters the workspace.
ucil-lsp-diagnostics = { path = "../ucil-lsp-diagnostics" }
# `lsp-types` is consumed by the F15 `type_check` handler (and by the
# WO-0090 frozen test) for the public `lsp_types::Diagnostic` /
# `DiagnosticSeverity` / `NumberOrString` / `Url` types that
# `DiagnosticsClient::diagnostics` returns and accepts.  The dep is
# already in the workspace `[workspace.dependencies]` block (used by
# `ucil-lsp-diagnostics`); the daemon-side use is additive and
# transitive in `Cargo.lock` already.
lsp-types = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
# `tokenizers` is needed by the WO-0064 / P2-W8-F04 frozen acceptance
# tests in `executor.rs` to construct a synthetic `WordLevel` tokenizer
# inline (no on-disk model artefact required).  Test-only — production
# code reaches the tokenizer transitively via `ucil-embeddings`.
tokenizers.workspace = true
# `sha2::Digest::digest` is needed by the WO-0064 / P2-W8-F04 frozen
# acceptance tests' `TestEmbeddingSource` impl to derive deterministic
# 768-dim vectors from a content hash.  Production code uses `sha2`
# already via the `[dependencies]` `sha2.workspace = true` line —
# `[dependencies]` deps are visible to tests too, so no duplicate
# dev-dep entry is required.
#
# `async-trait` is needed by the `TestEmbeddingSource` `EmbeddingSource`
# trait impl in `executor.rs`'s test-only block.  Production code uses
# `async-trait` already via the existing `[dependencies]` line.
