[package]
name = "ucil-embeddings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL embedding inference: ONNX Runtime integration, chunking, model management"

[dependencies]
ndarray.workspace = true
ort.workspace = true
thiserror.workspace = true
tokenizers.workspace = true
tokio.workspace = true
tracing.workspace = true
ucil-core = { path = "../ucil-core" }

[dev-dependencies]
tempfile.workspace = true
