[package]
name = "ucil-lsp-diagnostics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL LSP diagnostics bridge: complements Serena with call/type hierarchy and diagnostics"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
# Required for `Language` serde derives — future work-orders (F05 quality-issue
# feeds, F06 architecture deltas, F08 integration fixtures) serialise language
# tags into the knowledge-graph JSON blobs, so we pull the workspace `serde`
# dep in at the F03 skeleton stage to avoid churn later.
serde = { workspace = true }
# LSP 3.17 request/response types — used by the `diagnostics` module to
# decode `textDocument/diagnostic`, `callHierarchy/*`, and
# `typeHierarchy/supertypes` payloads.  Added in WO-0015 for P1-W5-F04.
lsp-types = { workspace = true }
# `async-trait` macro — allows the `SerenaClient` trait in
# `diagnostics.rs` to declare async methods while remaining object-safe
# so the bridge can store an `Arc<dyn SerenaClient + Send + Sync>`.
async-trait = { workspace = true }
ucil-core = { path = "../ucil-core" }

[dev-dependencies]
# Real on-disk `KnowledgeGraph` handle for `quality_pipeline` module-root
# tests (`P1-W5-F05`, `WO-0016`).  Opening the knowledge graph on a
# `TempDir` lets the test exercise the §12.1 DDL, WAL pragma, and
# `BEGIN IMMEDIATE` transaction behaviour without an in-memory shortcut
# or a `rusqlite::Connection` mock.
tempfile = { workspace = true }
