[package]
name = "ucil-treesitter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UCIL tree-sitter integration: multi-language parser, symbol extraction, AST-aware chunking"

[dependencies]
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
# Serde is required by `symbols::ExtractedSymbol` / `symbols::SymbolKind`,
# which derive `Serialize`/`Deserialize` so downstream consumers (Phase 1
# knowledge-graph pipeline, LMDB tag cache) can persist extracted symbols.
serde = { workspace = true }
# tree-sitter 0.25's `QueryMatches` yields captures via `StreamingIterator`
# (not `Iterator`); `symbols::run_query` uses this trait to iterate matches.
streaming-iterator.workspace = true
ucil-core = { path = "../ucil-core" }

# tree-sitter core + grammar crates (≥10 languages required)
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-json.workspace = true

# LMDB-backed tag cache (Phase 1 Week 2, WO-0018; feature P1-W2-F04).
# `heed` is a typed wrapper over LMDB; `bincode` encodes the stored
# `Vec<ExtractedSymbol>` values.  The tag cache is the L1 tier of the
# master-plan §2.1 tiered cache and lives on-disk at
# `.ucil/branches/<branch>/tags.lmdb` (master-plan §9.1).
heed = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
# Temp LMDB envs for `tag_cache` module-root tests (Phase 1 Week 2,
# WO-0018).  Phase-log invariant 1 forbids mocking LMDB — we open a real
# `heed::Env` under a `TempDir` instead.
tempfile = { workspace = true }
