[package]
name = "ucil-tests-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "UCIL cross-crate integration test binaries (tests/integration/*.rs)."

[lib]
path = "src/lib.rs"

[[test]]
name = "test_lsp_bridge"
path = "test_lsp_bridge.rs"

[dev-dependencies]
tokio       = { workspace = true }
async-trait = { workspace = true }
lsp-types   = { workspace = true }
serde_json  = { workspace = true }
tempfile    = { workspace = true }
ucil-core            = { path = "../../crates/ucil-core" }
ucil-lsp-diagnostics = { path = "../../crates/ucil-lsp-diagnostics" }
