[project]
name = "mixed-project"
version = "0.1.0"
requires-python = ">=3.11"
description = "Multi-language fixture with intentional lint defects"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
